# PM-Maintenance-System

./: .gitignore  API_TESTING_GUIDE.md  README.md  package-lock.json  test-api-all.js  test-api-trend.js  test-api.js  test-api2.js
.github/workflows/: unit-tests.yml
QR-generator/: Docker-compose.yml  Dockerfile  index.html  qr_generation.py  requirements.txt
pm-analytics-service/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  test_db.py
pm-analytics-service/app/: __init__.py  config.py  db.py  engine.py  main.py  repository.py  schemas.py  security.py
pm-analytics-service/app/analytics/: __init__.py  analytics_config.py  evaluator.py  insights.py  orchestrator.py  predictor.py
pm-backend/: Dockerfile  README.md  TEST_CASES.md  docker-compose.yml  openapi.yaml  pom.xml
pm-maintenance-mobile/: .env.example  .gitignore  App.tsx  README.md  app.json  package-lock.json  package.json
pm-maintenance-mobile/src/api/: client.ts  syncManager.ts
pm-maintenance-mobile/src/components/: AppMessageModal.tsx  DashboardStatCard.tsx  FlagListCard.tsx  InfoPill.tsx  OfflineSyncStatus.tsx  TaskLegendModal.tsx  TaskListView.tsx
pm-maintenance-mobile/src/context/: AuthContext.tsx  (+1 more)
postgresql-data-insertion-csvs/: Mock-data-capstone.xlsx  companies.csv  departments.csv  employees.csv  equipment_element.csv  equipment_parts.csv  equipment_type.csv  equipments.csv  generate_sql.py  lines.csv  plants.csv  pm-table-creation.sql  pm_schedule_approval.csv  pm_schedule_execution.csv  pm_std_tasks.csv  pm_task_schedules.csv  roles.csv  spare_parts.csv
(+212 files in other folders)
